--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -63,31 +63,51 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 ArgParse = "1.1"
 ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
+BlockArrays = "0.16"
 CLIMAParameters = "0.4"
+ClimaComms = "0.1"
+ClimaCommsMPI = "0.1"
 ClimaCore = "0.9, 0.10"
+ClimaCorePlots = "0.2"
+ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.4"
 Dierckx = "0.5"
+DiffEqBase = "6.83"
+DiffEqCallbacks = "2.22"
+DiffEqNoiseProcess = "5.9"
+DiffEqOperators = "4.42"
 Distributions = "0.25"
 DocStringExtensions = "0.8"
 FastGaussQuadrature = "0.4"
 Flux = "0.12"
+ForwardDiff = "0.10"
 Glob = "1.3"
+Insolation = "0.1"
+IntervalSets = "0.5, 0.6"
+JLD2 = "0.4"
 JSON = "0.21"
 LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
+NCRegressionTests = "0.1"
 OperatorFlux = "0.1"
 OrderedCollections = "1.4"
 OrdinaryDiffEq = "5.64.0"
+Plots = "1.27"
 PoissonRandom = "0.4"
-PrettyTables = "1.2"
+PrettyTables = "1.3"
+ProgressLogging = "0.1"
+QuadGK = "2.4"
+RRTMGP = "0.3"
+ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
-SciMLBase = "1"
-StaticArrays = "1"
+SciMLBase = "1.30"
+StaticArrays = "1.4"
 StatsBase = "0.33"
-StochasticDiffEq = "6.41"
+StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.3"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.7"
+TurbulenceConvection = "0.20"
 UnPack = "1"
 julia = "1.5"
 
