--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -65,9 +65,9 @@ ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
 CLIMAParameters = "0.4"
-ClimaComms = "0.1"
-ClimaCommsMPI = "0.1"
-ClimaCore = "0.9, 0.10"
+ClimaComms = "0.3"
+ClimaCommsMPI = "0.3"
+ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.4"
