--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,5 @@
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 ClimaAtmos = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
